--- a/test/index.html
+++ b/test/index.html
@@ -14,7 +14,7 @@
         :root {
             height: 100%;
             width: 100%;
-            overflow: hidden;
+            overflow: auto;
             margin: 0;
             padding: 0;
         }
